[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-fund-valuator"
version = "0.1.0"
description = "场外基金实时估值（基于持仓/指数）命令行工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fund-valuator = "realtime_fund_valuator.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
